--- a/singolo1.css
+++ b/singolo1.css
@@ -10,7 +10,7 @@
     font-family: 'Lato', 'sans-serif';
 }
 
-.container {
+.header-container {
     display: flex;
     width: 940px;
     max-width: 940px;
@@ -21,7 +21,7 @@
     position: relative;
     width: 940px;
     max-width: 940px;
-    margin: 0 auto;   
+    margin: 0 auto;  
 }
 
 .red-color-style {
@@ -41,13 +41,17 @@
     letter-spacing: -0.3px;
 }
 
-.navigation {
+.nav {
     font-size: 12px;
     font-weight: bold;
     margin-left: auto;
     display: flex;
     line-height: 6.32px;
     letter-spacing: -0.3px;
+}
+
+.nav__burger-button {
+    display: none;
 }
 
 .nav__list {
@@ -268,4 +272,136 @@
 .info-section__decorate {
     background-color: #fff;
     height: 6px;
+}
+
+@media (max-width: 590px) {
+    .header-container {
+        width: 350px;
+        max-width: 350px;
+        margin: 0 auto;
+    }
+
+    .wrapper {
+        width: 350px;
+        max-width: 350px;
+    }
+
+    /*Бургер-кнопка*/
+    .nav__burger-container {
+        width: 47px;
+        height: 40px;
+        position: relative;
+        top: 25px;
+        cursor: pointer;
+    }
+
+    .nav__burger-button {
+        display: block;
+        position: relative;
+        top: 22px;
+        right: 0px;
+        width: 47px;
+        height: 4px;
+        background-color: white;
+}
+
+    .nav__burger-button::after,
+    .nav__burger-button::before {
+        content: '';
+        display: block;
+        background-color: white;
+        width: 47px;
+        height: 4px;
+        position: relative;
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+}
+
+    .nav__burger-button::after {
+        top: 6px;
+    }
+
+    .nav__burger-button::before {
+        top: -10px;
+    }
+
+    .burger-active {
+        width: 0;
+        height: 0;
+    }
+
+    .burger-active::after {
+        top: -2px;
+
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+    }
+
+    .burger-active::before {
+        top: 1px;
+
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+}
+    /*Бургер-кнопка(конец кода)*/
+
+    .nav__list {
+        display: none;
+        margin-top: 10px;
+        margin-left: 10px;
+        flex-direction: column;
+        width: auto;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: auto;
+        height: auto;
+        font-size: 19px;
+        transition: 1s;
+        -webkit-transition: 1s;
+        -moz-transition: 1s;
+        -ms-transition: 1s;
+        -o-transition: 1s;
+}
+
+    .nav__list-item {
+        width: auto;
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .slider-section__wrapper {
+        width: 350px;
+        max-width: 350px;
+    }
+
+    .slider-section__image-one {
+        left: 105px;
+        background-size: 70%;
+        width: 200px;
+        height: 350px;
+    }
+
+    .slider-section__image-two {
+        background-size: 70%;
+        top: 380px;
+        left: 50px;
+        width: 350px;
+        height: 200px;
+    }
+
+    .slider-section__slider-right {
+        left: 330px;
+    }   
+
+
 }
