--- a/singolo1.css
+++ b/singolo1.css
@@ -50,9 +50,79 @@
     letter-spacing: -0.3px;
 }
 
+/*burger-button start*/
 .nav__burger-button {
     display: none;
 }
+
+.nav__burger-container {
+    width: 47px;
+    height: 40px;
+    position: relative;
+    top: 25px;
+    cursor: pointer;
+    
+    display: none;
+}
+
+.nav__burger-button {
+    display: block;
+    position: relative;
+    top: 22px;
+    right: 0px;
+    width: 47px;
+    height: 4px;
+    background-color: white;
+}
+
+.nav__burger-button::after,
+.nav__burger-button::before {
+    content: '';
+    display: block;
+    background-color: white;
+    width: 47px;
+    height: 4px;
+    position: relative;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+
+.nav__burger-button::after {
+    top: 6px;
+}
+
+.nav__burger-button::before {
+    top: -10px;
+}
+
+.burger-active {
+    width: 0;
+    height: 0;
+}
+
+.burger-active::after {
+    top: -2px;
+
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+}
+
+.burger-active::before {
+    top: 1px;
+
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+}
+/*burger-button end*/
 
 .nav__list {
     width: 371px;
@@ -209,8 +279,12 @@
     margin-bottom: 31px;
 }
 
-.info-section__list-item:not(.test-class) {
+.info-section__list-item {
     margin-right: 20px;
+}
+
+.info-section__list-item:nth-child(3n) {
+    margin-right: 0;
 }
 
 .test-class {
@@ -294,76 +368,11 @@
         max-width: 400px;
     }
 
-    /*Бургер-кнопка*/
     .nav__burger-container {
-        width: 47px;
-        height: 40px;
-        position: relative;
-        top: 25px;
-        cursor: pointer;
-    }
-
-    .nav__burger-button {
         display: block;
-        position: relative;
-        top: 22px;
-        right: 0px;
-        width: 47px;
-        height: 4px;
-        background-color: white;
-}
-
-    .nav__burger-button::after,
-    .nav__burger-button::before {
-        content: '';
-        display: block;
-        background-color: white;
-        width: 47px;
-        height: 4px;
-        position: relative;
-        transition: 0.3s;
-        -webkit-transition: 0.3s;
-        -moz-transition: 0.3s;
-        -ms-transition: 0.3s;
-        -o-transition: 0.3s;
-}
-
-    .nav__burger-button::after {
-        top: 6px;
     }
-
-    .nav__burger-button::before {
-        top: -10px;
-    }
-
-    .burger-active {
-        width: 0;
-        height: 0;
-    }
-
-    .burger-active::after {
-        top: -2px;
-
-        transform: rotate(-45deg);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-    }
-
-    .burger-active::before {
-        top: 1px;
-
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-}
-    /*Бургер-кнопка(конец кода)*/
 
     .nav__list {
-        display: none;
         margin-top: 10px;
         margin-left: 10px;
         flex-direction: column;
@@ -412,8 +421,110 @@
     }
 
     .slider-section__slider-right {
-        left: 330px;
-    }   
+        left: 380px;
+    }
 
+}
 
+@media (min-width: 576px) and (max-width: 768px) {
+    .header-container {
+        width: 600px;
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .wrapper {
+        width: 600px;
+        max-width: 600px;
+    }
+
+    .nav__burger-container {
+        display: block;
+    }
+
+    .nav__list {
+        margin-top: 10px;
+        margin-left: 10px;
+        flex-direction: column;
+        width: auto;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: auto;
+        height: auto;
+        font-size: 13px;
+        transition: 1s;
+        -webkit-transition: 1s;
+        -moz-transition: 1s;
+        -ms-transition: 1s;
+        -o-transition: 1s;
+    }
+
+    .nav__list-item {
+        width: auto;
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .nav__list-item:hover {
+        text-decoration: underline;
+    }
+
+    .nav__list-item::after {
+        display: none;
+    }
+    
+    .slider-section__background {
+        height: 650px;
+    }
+
+    .slider-section__wrapper {
+        width: 350px;
+        max-width: 350px;
+    }
+
+    .slider-section__image-one {
+        top: 30px;
+        left: 70px;
+        background-size: 180px;
+        width: 180px;
+        height: 370px;
+    }
+
+    .slider-section__image-two {
+        background-size: 390px;
+        top: 400px;
+        left: -10px;
+        width: 400px;
+        height: 210px;
+    }
+
+    .slider-section__slider-right {
+        left: 580px;
+    }
+
+    .info-section__list-item {
+        margin-right: 0px;
+    }
+
+    .info-section__list-item:nth-child(odd) {
+        margin-right: 40px;
+    }
+
+    
+    .info-section__list-description {
+        width: 200px;
+        max-width: 200px;
+    }
+
+}
+
+.hidden {
+    display: none;
+}
+
+@media (min-width: 769px) {
+    .hidden {
+        display: flex;
+    }
 }
