--- a/css/singolo2.css
+++ b/css/singolo2.css
@@ -49,7 +49,7 @@
     list-style: none;
     display: flex;
     justify-content: space-between;
-    width: 288px;
+    width: 289px;
 }
 
 .nav-list__list-item {
@@ -106,13 +106,10 @@
     margin-bottom: 45px;
 }
 
-.about-us__images-container {
-
-}
-
 .images-container__list {
     list-style: none;
     display: flex;
+    margin-bottom: 67px;
 }  
 
 .images-container__list-item {
@@ -147,12 +144,29 @@
     color: #767e9e;
     font-size: 12px;
     line-height: 21,56px;
-}
 
-.images-container__contacts-container {
-
+    margin-bottom: 34px;
 }
 
 .contacts-container__list {
     list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 152px;
+}
+
+.contacts-container__list-item {
+    border: 1px solid #69708b;
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.about-us__decoration-block {
+    background-color: #fff;
+    height: 6px;
 }
