--- a/css/singolo2.css
+++ b/css/singolo2.css
@@ -49,17 +49,24 @@
     list-style: none;
     display: flex;
     justify-content: space-between;
-    width: 289px;
+    width: 288px;
+    margin-left: 1px;
 }
 
 .nav-list__list-item {
     border: 1px solid #666d89;
-    padding: 2.5px 6px;
+    padding: 2.6px 6px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+/*!!!!**/
+.nav-list__list-item:first-child {
+    border-color: white;
+    color: white;
 }
 
 .nav-list__list-item:hover {
@@ -126,44 +133,55 @@
 }
 
 .images-container__image {
-    margin-bottom: 12px;
+    margin-bottom: 14px;
 }
 
 .third-level-title {
     font-weight: 900;
     font-size: 18px;
     color: #666d89;
-    line-height: 17,86px;
+    line-height: 17.86px;
 }
 
 .images-container__title {
-    margin-bottom: 11px;
+    margin-bottom: 10px;
 }
 
 .images-container__description {
     color: #767e9e;
     font-size: 12px;
-    line-height: 21,56px;
+    line-height: 21.56px;
 
-    margin-bottom: 34px;
+    margin-bottom: 23px;
 }
 
 .contacts-container__list {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    width: 152px;
+    width: 153px;
+    
+    padding-left: 1px;
 }
 
 .contacts-container__list-item {
     border: 1px solid #69708b;
     height: 32px;
     width: 32px;
+
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+}
+
+.images-container__list-item:last-child .contacts-container__list:last-child {
+    padding-left: 0px;
+}
+
+.images-container__list-item:last-child .contacts-container__list:last-child .contacts-container__list-item:last-child  {
+    margin-right: 1px;
 }
 
 .about-us__decoration-block {
