--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,17 @@
 .nav__link {
     text-decoration: none;
     color: inherit;
+    
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .nav__link:hover {
     text-decoration: underline;
+    color: #f06c64;
 }
 
 .nav__list-item::after {
