--- a/css/style.css
+++ b/css/style.css
@@ -106,12 +106,25 @@
     background-color: #f06c64;
     height: 594px;
     display: flex;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .slider-section__wrapper {
     width: 797px;
     margin: 0 auto;
     position: relative;
+}
+
+#slide-one, #slide-two {
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .slider-section__decorative-block {
@@ -135,6 +148,20 @@
     position: absolute;
     top: 174px;
     left: 314px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+
+.slider-section__image-one--second-slide {
+    background: url('../assets/slider-phones.svg') no-repeat;
+    height: 516px;
+    width: 534px;
+    position: absolute;
+    left: 183px;
+    top: 43px;
 }
 
 .slider-section__slider-left {
