--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,11 @@
 }
 
 #slide-one, #slide-two {
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -ms-transition: 0.2s;
+    -o-transition: 0.2s;
 }
 
 .slider-section__decorative-block {
@@ -139,6 +139,45 @@
     position: absolute;
     top: 53px;
     left: 1px;
+    cursor: pointer;
+}
+
+.black-vertical {
+    width: 194px;
+    height: 339px;
+    background-color: black;
+    position: relative;
+    top: 62px;
+    left: 11px;
+    border-radius: 2px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+}
+
+.black-horizontal {
+    width: 339px;
+    height: 194px;
+    background-color: black;
+    position: relative;
+    top: 11px;
+    left: 57px;
+    border-radius: 2px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
 }
 
 .slider-section__image-two {
@@ -148,11 +187,7 @@
     position: absolute;
     top: 174px;
     left: 314px;
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
+    cursor: pointer;
 }
 
 .slider-section__image-one--second-slide {
@@ -367,18 +402,13 @@
     -o-border-radius: 5px;
 }
 
-/*!!!!**/
-.portoflio-section__list-item:first-child {
-    border-color: white;
-    color: white;
-}
-
 .portoflio-section__list-item:hover {
     color: #c5c5c5;
     border-color: #c5c5c5;
 }
 
 .portoflio-section__link {
+    outline: none;
     text-decoration: none;
     color: inherit;
 }
@@ -393,6 +423,14 @@
 .image-list__list-item {
     margin-right: 20px;
     margin-bottom: 17px;
+}
+
+.image-list__image {
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
 }
 
 .portoflio-section__image-list .image-list__list-item:nth-child(4n) {
