--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,28 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Lato', 'sans-serif';
+    scroll-behavior: smooth;
+}
+
+.anchor {    /*style for anchor-links*/
+    position: absolute;
+    top: -80px;
+    left: 200px;
+    display: block;
+    width: 10px;
+    height: 10px;
 }
 
 .hidden {
     display: none;
+}
+
+.header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+
+    z-index: 10;
 }
 
 .header-container {
@@ -239,6 +257,7 @@
 
 .info-section {
     background-color: #f2f2f2;
+    position: relative;
 }
 
 .info-section__title {
@@ -354,6 +373,8 @@
     color: #767e9e;
     background-color: #2d303a;
     padding-top: 68px;
+
+    position: relative;
 }
 
 .second-level-title {
@@ -426,11 +447,17 @@
 }
 
 .image-list__image {
-    transition: 1s;
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-    -o-transition: 1s;
+    cursor: pointer;
+    transition: 0.15s;
+    -webkit-transition: 0.15s;
+    -moz-transition: 0.15s;
+    -ms-transition: 0.15s;
+    -o-transition: 0.15s;
+}
+
+.image-list__image--border {
+    outline: 5px solid #F06C64;
+    
 }
 
 .portoflio-section__image-list .image-list__list-item:nth-child(4n) {
@@ -440,6 +467,10 @@
 .portoflio-section__bottom-decoration {
     background-color: #323746;
     height: 6px;
+}
+
+.about-us-section {
+    position: relative;
 }
 
 .about-us {
@@ -533,6 +564,10 @@
 }
 
 /*singolo3 start*/
+.form-section {
+    position: relative;
+}
+
 .form-article {
     background-color: #f06c64;
     padding-top: 68px;
