--- a/css/style.css
+++ b/css/style.css
@@ -444,15 +444,21 @@
 .image-list__list-item {
     margin-right: 20px;
     margin-bottom: 17px;
+    transition-delay: 2s;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .image-list__image {
     cursor: pointer;
-    transition: 0.15s;
-    -webkit-transition: 0.15s;
-    -moz-transition: 0.15s;
-    -ms-transition: 0.15s;
-    -o-transition: 0.15s;
+    transition: 0.1s;
+    -webkit-transition: 0.1s;
+    -moz-transition: 0.1s;
+    -ms-transition: 0.1s;
+    -o-transition: 0.1s;
 }
 
 .image-list__image--border {
@@ -462,6 +468,7 @@
 
 .portoflio-section__image-list .image-list__list-item:nth-child(4n) {
     margin-right: 0;
+    overflow: hidden;
 }
 
 .portoflio-section__bottom-decoration {
